--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,282 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FCG - Admin Dashboard</title>
+    <link rel="stylesheet" href="admin.css">
+</head>
+<body>
+    <!-- Login Form -->
+    <div id="loginContainer">
+        <form id="loginForm">
+            <h1>FCG Admin Login</h1>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" id="loginBtn">Login</button>
+        </form>
+    </div>
+
+    <!-- Dashboard -->
+    <div id="dashboard">
+        <header id="dashboardHeader">
+            <div id="dashboardTitle">FCG Admin Dashboard</div>
+            <button id="logoutBtn" onclick="logout()">Logout</button>
+        </header>
+
+        <main id="dashboardContent">
+            <div id="sectionHeader">
+                <h2 id="sectionTitle">Manage Closed Deals</h2>
+                <button id="addDealBtn" onclick="openAddDealModal()">Add New Deal</button>
+            </div>
+
+            <div id="dealsTableContainer">
+                <div id="tableHeader">
+                    <h3 id="tableTitle">Current Deals</h3>
+                </div>
+                <table id="dealsTable">
+                    <thead>
+                        <tr>
+                            <th>Deal Title</th>
+                            <th>Value</th>
+                            <th>Industry</th>
+                            <th>Date</th>
+                            <th>Duration</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody id="dealsTableBody">
+                        <!-- Deals will be populated here -->
+                    </tbody>
+                </table>
+            </div>
+        </main>
+    </div>
+
+    <!-- Add/Edit Deal Modal -->
+    <div id="dealModal">
+        <div id="modalContent">
+            <div id="modalHeader">
+                <h3 id="modalTitle">Add New Deal</h3>
+                <button id="closeBtn" onclick="closeModal()">&times;</button>
+            </div>
+            <form id="dealForm">
+                <div class="form-group">
+                    <label for="dealTitle">Deal Title *</label>
+                    <input type="text" id="dealTitle" name="dealTitle" required>
+                </div>
+                <div class="form-group">
+                    <label for="dealValue">Deal Value *</label>
+                    <input type="text" id="dealValue" name="dealValue" placeholder="e.g., $150M" required>
+                </div>
+                <div class="form-group">
+                    <label for="dealIndustry">Industry *</label>
+                    <input type="text" id="dealIndustry" name="dealIndustry" required>
+                </div>
+                <div class="form-group">
+                    <label for="dealDate">Date *</label>
+                    <input type="text" id="dealDate" name="dealDate" placeholder="e.g., Q4 2023" required>
+                </div>
+                <div class="form-group">
+                    <label for="dealDuration">Duration</label>
+                    <input type="text" id="dealDuration" name="dealDuration" placeholder="e.g., 6 months">
+                </div>
+                <div class="form-group">
+                    <label for="dealDescription">Description *</label>
+                    <textarea id="dealDescription" name="dealDescription" rows="4" required></textarea>
+                </div>
+                <div id="formActions">
+                    <button type="submit" id="saveBtn">Save Deal</button>
+                    <button type="button" id="cancelBtn" onclick="closeModal()">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <script>
+        // Sample data - in a real application, this would come from a database
+        let deals = [
+            {
+                id: 1,
+                title: "TechCorp Acquisition",
+                value: "$150M",
+                industry: "Technology",
+                date: "Q4 2023",
+                duration: "6 months",
+                description: "Successfully facilitated the acquisition of TechCorp by a leading private equity firm, resulting in significant value creation for all stakeholders."
+            },
+            {
+                id: 2,
+                title: "Manufacturing Merger",
+                value: "$75M",
+                industry: "Manufacturing",
+                date: "Q3 2023",
+                duration: "8 months",
+                description: "Orchestrated a strategic merger between two manufacturing companies, creating synergies and expanding market presence."
+            },
+            {
+                id: 3,
+                title: "Healthcare Partnership",
+                value: "$200M",
+                industry: "Healthcare",
+                date: "Q2 2023",
+                duration: "10 months",
+                description: "Facilitated a strategic partnership between healthcare providers, improving patient care and operational efficiency."
+            }
+        ];
+
+        let currentEditId = null;
+
+        // Login functionality
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            // Simple authentication - in a real app, this would be server-side
+            if (username === 'admin' && password === 'password') {
+                document.getElementById('loginContainer').style.display = 'none';
+                document.getElementById('dashboard').style.display = 'block';
+                loadDeals();
+            } else {
+                alert('Invalid credentials. Use admin/password');
+            }
+        });
+
+        // Logout functionality
+        function logout() {
+            document.getElementById('loginContainer').style.display = 'flex';
+            document.getElementById('dashboard').style.display = 'none';
+            document.getElementById('loginForm').reset();
+        }
+
+        // Load deals into table
+        function loadDeals() {
+            const tableBody = document.getElementById('dealsTableBody');
+            tableBody.innerHTML = '';
+
+            deals.forEach(deal => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td>${deal.title}</td>
+                    <td>${deal.value}</td>
+                    <td>${deal.industry}</td>
+                    <td>${deal.date}</td>
+                    <td>${deal.duration}</td>
+                    <td>
+                        <div class="action-buttons">
+                            <button class="edit-btn" onclick="editDeal(${deal.id})">Edit</button>
+                            <button class="delete-btn" onclick="deleteDeal(${deal.id})">Delete</button>
+                        </div>
+                    </td>
+                `;
+                tableBody.appendChild(row);
+            });
+        }
+
+        // Open add deal modal
+        function openAddDealModal() {
+            currentEditId = null;
+            document.getElementById('modalTitle').textContent = 'Add New Deal';
+            document.getElementById('dealForm').reset();
+            document.getElementById('dealModal').style.display = 'block';
+        }
+
+        // Edit deal
+        function editDeal(id) {
+            const deal = deals.find(d => d.id === id);
+            if (deal) {
+                currentEditId = id;
+                document.getElementById('modalTitle').textContent = 'Edit Deal';
+                document.getElementById('dealTitle').value = deal.title;
+                document.getElementById('dealValue').value = deal.value;
+                document.getElementById('dealIndustry').value = deal.industry;
+                document.getElementById('dealDate').value = deal.date;
+                document.getElementById('dealDuration').value = deal.duration;
+                document.getElementById('dealDescription').value = deal.description;
+                document.getElementById('dealModal').style.display = 'block';
+            }
+        }
+
+        // Delete deal
+        function deleteDeal(id) {
+            if (confirm('Are you sure you want to delete this deal?')) {
+                deals = deals.filter(d => d.id !== id);
+                loadDeals();
+            }
+        }
+
+        // Close modal
+        function closeModal() {
+            document.getElementById('dealModal').style.display = 'none';
+            currentEditId = null;
+        }
+
+        // Handle deal form submission
+        document.getElementById('dealForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            
+            const formData = new FormData(e.target);
+            const dealData = {
+                title: formData.get('dealTitle'),
+                value: formData.get('dealValue'),
+                industry: formData.get('dealIndustry'),
+                date: formData.get('dealDate'),
+                duration: formData.get('dealDuration'),
+                description: formData.get('dealDescription')
+            };
+
+            if (currentEditId) {
+                // Edit existing deal
+                const index = deals.findIndex(d => d.id === currentEditId);
+                if (index !== -1) {
+                    deals[index] = { ...deals[index], ...dealData };
+                }
+            } else {
+                // Add new deal
+                const newId = Math.max(...deals.map(d => d.id), 0) + 1;
+                deals.push({ id: newId, ...dealData });
+            }
+
+            loadDeals();
+            closeModal();
+            e.target.reset();
+        });
+
+        // Close modal when clicking outside
+        window.onclick = function(event) {
+            const modal = document.getElementById('dealModal');
+            if (event.target === modal) {
+                closeModal();
+            }
+        }
+
+        // Export deals to JSON (for integration with main site)
+        function exportDeals() {
+            const dataStr = JSON.stringify(deals, null, 2);
+            const dataBlob = new Blob([dataStr], {type: 'application/json'});
+            const url = URL.createObjectURL(dataBlob);
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = 'deals.json';
+            link.click();
+        }
+
+        // Add export button to dashboard
+        document.addEventListener('DOMContentLoaded', function() {
+            const sectionHeader = document.getElementById('sectionHeader');
+            const exportBtn = document.createElement('button');
+            exportBtn.textContent = 'Export Deals';
+            exportBtn.id = 'exportBtn';
+            exportBtn.onclick = exportDeals;
+            sectionHeader.appendChild(exportBtn);
+        });
+    </script>
+</body>
+</html> 
