--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2024 FCG. All rights reserved.</p>
+            <p>&copy; 2025 Fortune Capital Group. All rights reserved.</p>
         </div>
     </footer>
 </body>
