--- a/team.html
+++ b/team.html
@@ -163,7 +163,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>&copy; 2024 FCG. All rights reserved.</p>
+            <p>&copy; 2025 Fortune Capital Group. All rights reserved.</p>
         </div>
     </footer>
 </body>
