Final updates for design example

--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FCG - About Us</title>
     <link rel="stylesheet" href="about.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -24,7 +27,7 @@
 
     <!-- Page Header -->
     <header class="page-header">
-        <h1>About FCG</h1>
+        <h1>Our Company</h1>
         <p>Learn about our story, mission, and the values that drive us forward</p>
     </header>
 
@@ -40,11 +43,11 @@
         <div class="mission-vision">
             <div class="mission-card">
                 <h3>Our Mission</h3>
-                <p>To empower businesses with innovative solutions that drive growth, efficiency, and competitive advantage. We believe in building lasting partnerships that create measurable value for our clients.</p>
+                <p>To provide exceptional commercial real estate debt advisory services that maximize value for our clients through strategic financing solutions, deep lender relationships, and unwavering commitment to deal execution. We empower property owners and investors to achieve optimal capital structures across all asset classes.</p>
             </div>
             <div class="vision-card">
                 <h3>Our Vision</h3>
-                <p>To be the most trusted partner for business transformation, known for our expertise, integrity, and commitment to client success. We envision a future where every business we touch achieves its full potential.</p>
+                <p>To be the most trusted and respected CRE debt advisory firm in the industry, known for our expertise in complex financing structures, transparent client relationships, and consistent ability to close deals even in challenging market conditions. We envision a future where every client we serve achieves their financing objectives with confidence.</p>
             </div>
         </div>
 
@@ -53,19 +56,19 @@
             <div class="values-grid">
                 <div class="value-item">
                     <h4>Excellence</h4>
-                    <p>We strive for excellence in everything we do, from client service to solution delivery.</p>
+                    <p>We deliver exceptional results through deep market knowledge, meticulous deal structuring, and relentless pursuit of the best financing terms for our clients.</p>
                 </div>
                 <div class="value-item">
                     <h4>Integrity</h4>
-                    <p>We conduct business with honesty, transparency, and ethical practices.</p>
+                    <p>We maintain full transparency with both lenders and clients, conducting business with honesty and ethical practices that build lasting trust.</p>
                 </div>
                 <div class="value-item">
-                    <h4>Innovation</h4>
-                    <p>We embrace new ideas and technologies to deliver cutting-edge solutions.</p>
+                    <h4>Dedication</h4>
+                    <p>We are committed to seeing every deal through to successful closing, working tirelessly to overcome challenges and deliver on our promises.</p>
                 </div>
                 <div class="value-item">
                     <h4>Partnership</h4>
-                    <p>We build long-term relationships based on trust, collaboration, and mutual success.</p>
+                    <p>We build enduring relationships with lenders and clients based on mutual respect, collaboration, and shared success in the commercial real estate market.</p>
                 </div>
             </div>
         </div>
