--- a/closings.html
+++ b/closings.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FCG - Closed Deals</title>
     <link rel="stylesheet" href="closings.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -24,7 +27,7 @@
 
     <!-- Page Header -->
     <header class="page-header">
-        <h1>Our Closed Deals</h1>
+        <h1>Proven Results</h1>
         <p>Success stories and completed transactions that showcase our expertise</p>
     </header>
 
@@ -39,19 +42,19 @@
             <h3>Our Success Metrics</h3>
             <div class="stats-grid">
                 <div class="stat-item">
-                    <div class="stat-number">500+</div>
+                    <div class="stat-number">XXX+</div>
                     <div class="stat-label">Deals Closed</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">$2.5B</div>
-                    <div class="stat-label">Total Value</div>
+                    <div class="stat-number">$3B+</div>
+                    <div class="stat-label">Transactions Value</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">95%</div>
+                    <div class="stat-number">XX%</div>
                     <div class="stat-label">Success Rate</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">XX+</div>
                     <div class="stat-label">Industries</div>
                 </div>
             </div>
@@ -62,11 +65,11 @@
             <div class="deals-grid">
                 <div class="deal-card">
                     <div class="deal-header">
-                        <div class="deal-title">TechCorp Acquisition</div>
+                        <div class="deal-title">Manhattan Office Tower Refinancing</div>
                         <div class="deal-value">$150M</div>
                     </div>
-                    <div class="deal-industry">Technology</div>
-                    <div class="deal-description">Successfully facilitated the acquisition of TechCorp by a leading private equity firm, resulting in significant value creation for all stakeholders.</div>
+                    <div class="deal-industry">Commercial Office</div>
+                    <div class="deal-description">Successfully structured and closed a $150M refinancing for a Class A office tower in Midtown Manhattan, securing favorable terms and extending the loan maturity.</div>
                     <div class="deal-details">
                         <span class="deal-date">Q4 2023</span>
                         <span class="deal-duration">6 months</span>
@@ -75,11 +78,11 @@
 
                 <div class="deal-card">
                     <div class="deal-header">
-                        <div class="deal-title">Manufacturing Merger</div>
+                        <div class="deal-title">Multifamily Acquisition Financing</div>
                         <div class="deal-value">$75M</div>
                     </div>
-                    <div class="deal-industry">Manufacturing</div>
-                    <div class="deal-description">Orchestrated a strategic merger between two manufacturing companies, creating synergies and expanding market presence.</div>
+                    <div class="deal-industry">Multifamily</div>
+                    <div class="deal-description">Arranged acquisition financing for a 300-unit luxury apartment complex in Brooklyn, providing optimal leverage and competitive pricing for our client.</div>
                     <div class="deal-details">
                         <span class="deal-date">Q3 2023</span>
                         <span class="deal-duration">8 months</span>
@@ -88,11 +91,11 @@
 
                 <div class="deal-card">
                     <div class="deal-header">
-                        <div class="deal-title">Healthcare Partnership</div>
+                        <div class="deal-title">Hotel Construction Loan</div>
                         <div class="deal-value">$200M</div>
                     </div>
-                    <div class="deal-industry">Healthcare</div>
-                    <div class="deal-description">Facilitated a strategic partnership between healthcare providers, improving patient care and operational efficiency.</div>
+                    <div class="deal-industry">Hospitality</div>
+                    <div class="deal-description">Secured construction financing for a 200-room boutique hotel in Miami Beach, navigating complex zoning requirements and market conditions.</div>
                     <div class="deal-details">
                         <span class="deal-date">Q2 2023</span>
                         <span class="deal-duration">10 months</span>
@@ -101,11 +104,11 @@
 
                 <div class="deal-card">
                     <div class="deal-header">
-                        <div class="deal-title">Retail Expansion</div>
+                        <div class="deal-title">Retail Center Bridge Loan</div>
                         <div class="deal-value">$45M</div>
                     </div>
                     <div class="deal-industry">Retail</div>
-                    <div class="deal-description">Supported a major retail chain's expansion strategy through strategic acquisitions and market entry.</div>
+                    <div class="deal-description">Provided bridge financing for a shopping center redevelopment project, enabling the client to execute their value-add strategy and secure permanent financing.</div>
                     <div class="deal-details">
                         <span class="deal-date">Q1 2023</span>
                         <span class="deal-duration">4 months</span>
@@ -114,11 +117,11 @@
 
                 <div class="deal-card">
                     <div class="deal-header">
-                        <div class="deal-title">Financial Services Deal</div>
+                        <div class="deal-title">Industrial Portfolio Refinancing</div>
                         <div class="deal-value">$300M</div>
                     </div>
-                    <div class="deal-industry">Financial Services</div>
-                    <div class="deal-description">Completed a complex financial services transaction involving multiple regulatory approvals and stakeholder coordination.</div>
+                    <div class="deal-industry">Industrial</div>
+                    <div class="deal-description">Completed a complex portfolio refinancing across 15 industrial properties, optimizing debt structure and achieving significant interest savings.</div>
                     <div class="deal-details">
                         <span class="deal-date">Q4 2022</span>
                         <span class="deal-duration">12 months</span>
@@ -127,11 +130,11 @@
 
                 <div class="deal-card">
                     <div class="deal-header">
-                        <div class="deal-title">Energy Infrastructure</div>
+                        <div class="deal-title">Mixed-Use Development Financing</div>
                         <div class="deal-value">$180M</div>
                     </div>
-                    <div class="deal-industry">Energy</div>
-                    <div class="deal-description">Facilitated the development and financing of critical energy infrastructure projects.</div>
+                    <div class="deal-industry">Mixed-Use</div>
+                    <div class="deal-description">Structured financing for a mixed-use development including residential, retail, and office components, coordinating multiple capital sources.</div>
                     <div class="deal-details">
                         <span class="deal-date">Q3 2022</span>
                         <span class="deal-duration">15 months</span>
@@ -143,14 +146,14 @@
         <div class="testimonials-section">
             <h2>Client Testimonials</h2>
             <div class="testimonial">
-                <div class="testimonial-text">"FCG's expertise and dedication were instrumental in closing our deal. Their team's attention to detail and strategic guidance exceeded our expectations."</div>
-                <div class="testimonial-author">- Sarah Johnson, CEO</div>
-                <div class="testimonial-company">TechCorp Industries</div>
+                <div class="testimonial-text">"FCG's deep understanding of commercial real estate debt markets was invaluable. They secured us terms that were significantly better than what we could have achieved on our own."</div>
+                <div class="testimonial-author">- Sarah Johnson, Managing Director</div>
+                <div class="testimonial-company">Manhattan Real Estate Partners</div>
             </div>
             <div class="testimonial">
-                <div class="testimonial-text">"The FCG team demonstrated exceptional professionalism throughout the entire process. They truly understand our business and delivered outstanding results."</div>
-                <div class="testimonial-author">- Michael Chen, CFO</div>
-                <div class="testimonial-company">Global Manufacturing Co.</div>
+                <div class="testimonial-text">"The FCG team's expertise in multifamily financing and their relationships with lenders made our acquisition financing process seamless. They truly understand the nuances of commercial real estate debt."</div>
+                <div class="testimonial-author">- Michael Chen, Principal</div>
+                <div class="testimonial-company">Brooklyn Development Group</div>
             </div>
         </div>
     </main>
