--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <!-- Property Closings Section -->
     <section class="closings-preview">
         <div class="closings-content">
-            <h2>Recent Property Closings</h2>
+            <h2>Recent Spotlight Closings</h2>
             <div class="closings-grid">
                 <div class="closing-card">
-                    <img src="multifamily.jpg" alt="Multifamily Complex" class="closing-image">
+                    <img src="ClosingPhotos/multifamily.jpg" alt="Multifamily Complex" class="closing-image">
                     <div class="closing-header">
                         <h3>Multifamily Complex</h3>
                         <span class="closing-value">$45M</span>
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="closing-card">
-                    <img src="office.jpg" alt="Office Building" class="closing-image">
+                    <img src="ClosingPhotos/officebuilding.jpeg" alt="Office Building" class="closing-image">
                     <div class="closing-header">
                         <h3>Office Building</h3>
                         <span class="closing-value">$28M</span>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="closing-card">
-                    <img src="retail.jpg" alt="Retail Center" class="closing-image">
+                    <img src="ClosingPhotos/retailcenter.jpg" alt="Retail Center" class="closing-image">
                     <div class="closing-header">
                         <h3>Retail Center</h3>
                         <span class="closing-value">$32M</span>
