--- a/team.html
+++ b/team.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FCG - Our Team</title>
     <link rel="stylesheet" href="team.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -36,94 +39,40 @@
         </div>
 
         <div class="leadership-section">
-            <h2>Executive Leadership</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <div class="member-photo">JD</div>
+                    <div class="member-photo">JG</div>
                     <div class="member-info">
-                        <div class="member-name">John Davis</div>
-                        <div class="member-title">Chief Executive Officer</div>
-                        <div class="member-bio">John brings over 15 years of executive leadership experience in business transformation and strategic growth. He has successfully led multiple companies through periods of significant change and expansion.</div>
-                        <div class="member-social">
-                            <a href="#" class="social-link">L</a>
-                            <a href="#" class="social-link">T</a>
-                            <a href="#" class="social-link">E</a>
-                        </div>
+                        <div class="member-name">Jacob Gluck</div>
+                        <div class="member-title">CEO and Founder</div>
+                        <div class="member-bio">Team Member Description</div>
                     </div>
                 </div>
 
                 <div class="team-member">
                     <div class="member-photo">SM</div>
                     <div class="member-info">
-                        <div class="member-name">Sarah Mitchell</div>
-                        <div class="member-title">Chief Operations Officer</div>
-                        <div class="member-bio">Sarah oversees all operational aspects of CFG, ensuring efficient delivery of our services. Her expertise in process optimization has been instrumental in our continued growth.</div>
-                        <div class="member-social">
-                            <a href="#" class="social-link">L</a>
-                            <a href="#" class="social-link">T</a>
-                            <a href="#" class="social-link">E</a>
-                        </div>
+                        <div class="member-name">Michael Helmreich</div>
+                        <div class="member-title">Senior Vice President</div>
+                        <div class="member-bio">Team Member Description</div>
                     </div>
                 </div>
 
                 <div class="team-member">
                     <div class="member-photo">MJ</div>
                     <div class="member-info">
-                        <div class="member-name">Michael Johnson</div>
-                        <div class="member-title">Chief Technology Officer</div>
-                        <div class="member-bio">Michael leads our technology strategy and innovation initiatives. With a background in software development and digital transformation, he ensures we stay ahead of industry trends.</div>
-                        <div class="member-social">
-                            <a href="#" class="social-link">L</a>
-                            <a href="#" class="social-link">T</a>
-                            <a href="#" class="social-link">E</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="leadership-section">
-            <h2>Senior Management</h2>
-            <div class="team-grid">
-                <div class="team-member">
-                    <div class="member-photo">AW</div>
-                    <div class="member-info">
-                        <div class="member-name">Amanda Wilson</div>
-                        <div class="member-title">VP of Client Services</div>
-                        <div class="member-bio">Amanda ensures exceptional client experiences and oversees our account management team. Her dedication to client success has resulted in long-term partnerships.</div>
-                        <div class="member-social">
-                            <a href="#" class="social-link">L</a>
-                            <a href="#" class="social-link">T</a>
-                            <a href="#" class="social-link">E</a>
-                        </div>
+                        <div class="member-name">Joseph Burnstein</div>
+                        <div class="member-title">Commercial Morgage Broker</div>
+                        <div class="member-bio">Team Member Description</div>
                     </div>
                 </div>
 
                 <div class="team-member">
-                    <div class="member-photo">RB</div>
+                    <div class="member-photo">JS</div>
                     <div class="member-info">
-                        <div class="member-name">Robert Brown</div>
-                        <div class="member-title">VP of Business Development</div>
-                        <div class="member-bio">Robert drives our growth strategy and builds strategic partnerships. His extensive network and business acumen have been key to our market expansion.</div>
-                        <div class="member-social">
-                            <a href="#" class="social-link">L</a>
-                            <a href="#" class="social-link">T</a>
-                            <a href="#" class="social-link">E</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="team-member">
-                    <div class="member-photo">LC</div>
-                    <div class="member-info">
-                        <div class="member-name">Lisa Chen</div>
-                        <div class="member-title">VP of Finance</div>
-                        <div class="member-bio">Lisa manages our financial operations and strategic planning. Her expertise in financial management ensures sustainable growth and operational excellence.</div>
-                        <div class="member-social">
-                            <a href="#" class="social-link">L</a>
-                            <a href="#" class="social-link">T</a>
-                            <a href="#" class="social-link">E</a>
-                        </div>
+                        <div class="member-name">John Smith</div>
+                        <div class="member-title">Underwriter</div>
+                        <div class="member-bio">Team Member Description</div>
                     </div>
                 </div>
             </div>
