--- a/admin.html
+++ b/admin.html
@@ -99,6 +99,45 @@
         </div>
     </div>
 
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-section footer-logo">
+                <!-- Logo image removed -->
+            </div>
+            <div class="footer-section footer-quick-links-container">
+                <div class="footer-quick-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="closings.html">Closed Deals</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="admin.html">Admin</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-section footer-connect-container">
+                <div class="footer-connect">
+                    <h3>Connect With Us</h3>
+                    <div class="social-links">
+                        <a href="https://www.linkedin.com/company/fortunecapital-group/" title="LinkedIn" target="_blank">in</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-section footer-location-container">
+                <div class="footer-location">
+                    <h3>Office Location</h3>
+                    <p>123 Business Ave, Suite 100<br>
+                    New York, NY 10001<br>
+                    United States</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Fortune Capital Group. All rights reserved.</p>
+        </div>
+    </footer>
+
     <script>
         // Sample data - in a real application, this would come from a database
         let deals = [
