--- a/closings.html
+++ b/closings.html
@@ -161,18 +161,17 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <div class="footer-section footer-logo">
-                <img src="FortuneCapitalGroupLogo.jpg" alt="Fortune Capital Group Logo" class="footer-logo-img">
-            </div>
-            
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="team.html">Our Team</a></li>
-                    <li><a href="closings.html">Closed Deals</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
+            <div class="footer-section footer-quick-links-container">
+                <div class="footer-quick-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="team.html">Our Team</a></li>
+                        <li><a href="closings.html">Closed Deals</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="admin.html">Admin</a></li>
+                    </ul>
+                </div>
             </div>
             
             <div class="footer-section">
