--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <img src="CFGlogoSmall.png" alt="FCG Logo" class="logo">
             </a>
         </div>
+        <button class="nav-toggle" aria-label="Open navigation">
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+        </button>
         <ul class="nav-links">
             <li><a href="about.html">About</a></li>
             <li><a href="team.html">Team</a></li>
@@ -165,5 +170,16 @@
             <p>&copy; 2025 Fortune Capital Group. All rights reserved.</p>
         </div>
     </footer> 
+
+    <script>
+    const navToggle = document.querySelector('.nav-toggle');
+    const navLinks = document.querySelector('.nav-links');
+    if (navToggle && navLinks) {
+      navToggle.addEventListener('click', () => {
+        navLinks.classList.toggle('nav-open');
+        navToggle.classList.toggle('open');
+      });
+    }
+    </script>
 </body>
 </html>
