--- a/team.html
+++ b/team.html
@@ -17,6 +17,11 @@
                 <img src="CFGlogoSmall.png" alt="FCG Logo" class="logo">
             </a>
         </div>
+        <button class="nav-toggle" aria-label="Open navigation">
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span>
+        </button>
         <ul class="nav-links">
             <li><a href="about.html">About</a></li>
             <li><a href="team.html">Team</a></li>
@@ -24,6 +29,17 @@
             <li><a href="contact.html" class="contact">CONTACT US</a></li>
         </ul>
     </nav>
+
+    <script>
+    const navToggle = document.querySelector('.nav-toggle');
+    const navLinks = document.querySelector('.nav-links');
+    if (navToggle && navLinks) {
+      navToggle.addEventListener('click', () => {
+        navLinks.classList.toggle('nav-open');
+        navToggle.classList.toggle('open');
+      });
+    }
+    </script>
 
     <!-- Page Header -->
     <header class="page-header">
