--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <section class="team-intro">
         <div class="team-intro-content">
             <div class="team-intro-left">
-                <img src="headshotPlaceholder.jpg" alt="Jake Gluck" class="team-headshot">
-                <p class="team-name">Jake Gluck</p>
+                <img src="headshotPlaceholder.jpg" alt="Jacob Gluck" class="team-headshot">
+                <p class="team-name">Jacob Gluck</p>
                 <p class="team-title">Founder and CEO</p>
             </div>
             
