--- a/index.html
+++ b/index.html
@@ -90,45 +90,8 @@
     <section class="closings-preview">
         <div class="closings-content">
             <h2>Recent Spotlight Closings</h2>
-            <div class="closings-grid">
-                <div class="closing-card">
-                    <img src="ClosingPhotos/multifamily.jpg" alt="Multifamily Complex" class="closing-image">
-                    <div class="closing-header">
-                        <h3>Multifamily Complex</h3>
-                        <span class="closing-value">$45M</span>
-                    </div>
-                    <p>Luxury apartment complex in downtown area with 200+ units</p>
-                    <div class="closing-details">
-                        <span class="closing-date">Q4 2023</span>
-                        <span class="closing-type">Multifamily</span>
-                    </div>
-                </div>
-
-                <div class="closing-card">
-                    <img src="ClosingPhotos/officebuilding.jpeg" alt="Office Building" class="closing-image">
-                    <div class="closing-header">
-                        <h3>Office Building</h3>
-                        <span class="closing-value">$28M</span>
-                    </div>
-                    <p>Class A office space with modern amenities and prime location</p>
-                    <div class="closing-details">
-                        <span class="closing-date">Q3 2023</span>
-                        <span class="closing-type">Office</span>
-                    </div>
-                </div>
-
-                <div class="closing-card">
-                    <img src="ClosingPhotos/retailcenter.jpg" alt="Retail Center" class="closing-image">
-                    <div class="closing-header">
-                        <h3>Retail Center</h3>
-                        <span class="closing-value">$32M</span>
-                    </div>
-                    <p>Shopping center with anchor tenants and high foot traffic</p>
-                    <div class="closing-details">
-                        <span class="closing-date">Q2 2023</span>
-                        <span class="closing-type">Retail</span>
-                    </div>
-                </div>
+            <div class="closings-grid" id="spotlightClosingsGrid">
+                <!-- Spotlight closings will be loaded dynamically -->
             </div>
             <div class="closings-button-container">
                 <a href="closings.html" class="closings-button">SEE MORE</a>
@@ -181,6 +144,67 @@
         navToggle.classList.toggle('open');
       });
     }
+    </script>
+
+    <script>
+    // Deterministic shuffle using seed (date)
+    function seededShuffle(array, seed) {
+        let m = array.length, t, i;
+        let random = mulberry32(seed);
+        while (m) {
+            i = Math.floor(random() * m--);
+            t = array[m];
+            array[m] = array[i];
+            array[i] = t;
+        }
+        return array;
+    }
+    // Mulberry32 PRNG
+    function mulberry32(a) {
+        return function() {
+            var t = a += 0x6D2B79F5;
+            t = Math.imul(t ^ t >>> 15, t | 1);
+            t ^= t + Math.imul(t ^ t >>> 7, t | 61);
+            return ((t ^ t >>> 14) >>> 0) / 4294967296;
+        }
+    }
+
+    async function loadSpotlightClosings() {
+        const API_BASE_URL = window.location.hostname === 'localhost'
+            ? 'http://localhost:3001/api'
+            : `${window.location.origin}/api`;
+        try {
+            const response = await fetch(`${API_BASE_URL}/deals`);
+            if (!response.ok) throw new Error('Failed to fetch deals');
+            let deals = await response.json();
+            if (!Array.isArray(deals) || deals.length === 0) return;
+            // Deterministic shuffle based on current date (YYYYMMDD)
+            const today = new Date();
+            const seed = parseInt(`${today.getFullYear()}${String(today.getMonth()+1).padStart(2,'0')}${String(today.getDate()).padStart(2,'0')}`);
+            deals = seededShuffle(deals, seed);
+            const spotlight = deals.slice(0, 3);
+            const grid = document.getElementById('spotlightClosingsGrid');
+            grid.innerHTML = spotlight.map(deal => `
+                <div class="closing-card">
+                    <img src="${deal.image || 'headshotPlaceholder.jpg'}" alt="${deal.title}" class="closing-image" onerror="this.src='headshotPlaceholder.jpg'">
+                    <div class="closing-header">
+                        <h3>${deal.title}</h3>
+                        <span class="closing-value">${deal.value}</span>
+                    </div>
+                    <p>${deal.description}</p>
+                    <div class="closing-details">
+                        <span class="closing-date">${deal.date}</span>
+                        <span class="closing-type">${deal.industry}</span>
+                        ${deal.duration ? `<span class="closing-duration">${deal.duration}</span>` : ''}
+                    </div>
+                </div>
+            `).join('');
+        } catch (error) {
+            document.getElementById('spotlightClosingsGrid').innerHTML = `<div style="text-align:center; color:#666;">Unable to load spotlight closings.</div>`;
+        }
+    }
+
+    document.addEventListener('DOMContentLoaded', loadSpotlightClosings);
     </script>
 </body>
 </html>
